
	* hildon-widgets/hildon-window.c: 
	  - set the toolbar height explicitely
	  - use show instead of show_all on the common_toolbar
	  - add the toolbars bottom-up instead of top-down
	* hildon-widgets/hildon-program.c:
	  - don't assume that a window was realized when added to 
	    the program


2006-03-03  Luc Pionchon  <luc.pionchon@nokia.com>

	Cleanup weekday picker,

	* hildon-widgets/hildon-weekday-picker.c
	(_): removed unused gettext macro
	(button_toggle): use meaningful parameter name
	(hildon_weekday_picker_forall): use g_asserts instead of g_return_if_fail
	(hildon_weekday_picker_size_allocate): likewise.
	(button_toggle): likewise.

	
2006-03-03  Luc Pionchon  <luc.pionchon@nokia.com>

	Cleanup time editor,
	
	* hildon-widgets/hildon-time-editor.c
	(HILDON_TIME_EDITOR_GET_PRIVATE): moved up in the file.
	(ENTRY_BORDER, ICON_WIDTH, ICON_HEIGHT): removed hardcoded pixel sizes.
	(HILDON_TIME_EDITOR_TIME_LOWER_VALUE): removed (unused)
	(HILDON_TIME_EDITOR_TIME_UPPER_VALUE): removed (unused)

	(struct _HildonTimeEditorPrivate):
	- h_entry, m_entry, s_entry replaced by entries[],
	                            allows to remove a lot of code.
	- label  renamed to hm_label
	- label2 renamed to sec_label
	- ampm   renamed to ampm_label
	- show_s renamed to show_seconds
	- removed fields: icon, valid_value, validated

	+ moved up in the file.

	(enum HildonValidation): removed unused field 'VALIDATION_ERROR'

	(ENTRY_HOURS, ENTRY_MINS, ENTRY_SECS): added (enum)

	(set_widget_allocation): removed
	(hildon_time_editor_entry_changed): removed

	(hildon_time_editor_forall): use g_asserts instead of g_return_if_fails

	(hildon_time_editor_forall): removed unnecessary code
	(hildon_time_editor_destroy): likewise. 

	(hildon_time_editor_class_init): use MIN_DURATION and MAX_DURATION

	(hildon_time_editor_tap_and_hold_setup): loop on 'entries[]'

	(hildon_time_editor_set_to_current_time): new function. (factorise code)